API: prefix routes with /api (#291)
